--- a/uiapp/src/app/common-header/common-header.component.html
+++ b/uiapp/src/app/common-header/common-header.component.html
@@ -9,7 +9,7 @@
             </a>
             <span style=" color:#ffffff !important; margin-left: 1030px;" *ngIf="user">{{user.user}}&nbsp;&nbsp;&nbsp;&nbsp;[{{role}}]
             </span>
-           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i style=" color:#ffffff !important;" class="fas fa-sign-out-alt ml-auto" (click)="logOut()"></i>
+           &nbsp;&nbsp;&nbsp;<i style=" color:#ffffff !important;" class="fas fa-sign-out-alt ml-auto" (click)="logOut()"></i>
         </nav>
     </header>
 </div>y
